# breakwater

./: .gitignore  Cargo.toml  README.md
examples/: habitable_planet_reporter.rs  hello_world.rs  star_name_generator.rs  star_reporter.rs  star_system_reporter.rs  star_visualizer.rs  stellar_neighborhood.rs
examples_bak/: star_system_reporter.rs  star_visualizer.rs  stellar_neighborhood.rs
src/: lib.rs  main.rs
src/astronomy/: mod.rs
src/astronomy/close_binary_star/: mod.rs
src/astronomy/close_binary_star/constants/: mod.rs
src/astronomy/close_binary_star/constraints/: mod.rs
src/astronomy/close_binary_star/error/: mod.rs
src/astronomy/close_binary_star/math/: mod.rs
src/astronomy/constants/: mod.rs
src/astronomy/distant_binary_star/: mod.rs
src/astronomy/distant_binary_star/constraints/: mod.rs
src/astronomy/distant_binary_star/error/: mod.rs
src/astronomy/error/: mod.rs
src/astronomy/galaxy/: mod.rs
src/astronomy/galaxy/constraints/: mod.rs
src/astronomy/galaxy/error/: mod.rs
src/astronomy/gas_giant_planet/: mod.rs
src/astronomy/host_star/: mod.rs
src/astronomy/math/: mod.rs
src/astronomy/moon/: mod.rs
src/astronomy/moons/: mod.rs
src/astronomy/planet/: mod.rs
src/astronomy/planetary_system/: mod.rs
src/astronomy/satellite_system/: mod.rs
src/astronomy/satellite_systems/: mod.rs
src/astronomy/star/: mod.rs
src/astronomy/star_subsystem/: mod.rs
src/astronomy/star_system/: mod.rs
src/astronomy/stellar_neighbor/: mod.rs
src/astronomy/stellar_neighborhood/: mod.rs
src/astronomy/terrestrial_planet/: mod.rs
(+97 files in other folders)
