[package]
name = "breakwater"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]

[lib]
name = "breakwater"
path = "src/lib.rs"

[[bin]]
name = "breakwater"
path = "src/main.rs"

[dependencies]
assert_approx_eq = "1.1.0"
function_name = "0.3.0"
log = { version = "0.4.17", features= ["max_level_trace", "release_max_level_warn"] }
pretty_env_logger = "0.4.0"
rand = "0.8.5"
volmark = { path = "../volmark" }
