[package]
name = "breakwater"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]

[lib]
name = "breakwater"
path = "src/lib.rs"

[[bin]]
name = "breakwater"
path = "src/main.rs"

[dependencies]
assert_approx_eq = "1.1.0"
function_name = "0.3.0"
log = { version = "0.4.17", features= ["max_level_trace", "release_max_level_warn"] }
pretty_env_logger = "0.4.0"
rand = "0.8.5"
volmark = { path = "../volmark" }
honeyholt = { path = "../honeyholt" }

[[example]]
name = "star_visualizer"
path = "examples/star_visualizer.rs"

[dev-dependencies]
bevy_prototype_lyon = "0.4.0"
bevy_fly_camera = "0.8.0"
bevy_pancam = "0.2"
bevy_egui = "0.12"
derive_more = "*"

[dev-dependencies.bevy]
version = "0.6.1"
